bug fix: search input was loading before the map, causing layout to shift as page loads

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 
+* {
+    box-sizing: border-box;
+}
 
-
+.hide {
+    display: none;
+}
 
 .book-results {
     margin-top: 40px;
@@ -13,10 +18,6 @@
     width: 500px;
     margin-top: 40px;
     border-top: 1px solid black;
-}
-
-* {
-    box-sizing: border-box;
 }
 
 #map {
@@ -47,4 +48,3 @@
     height: 27px;
     margin-top: 10px;
 }
-
